--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
     <head> 
         <meta charset="UTF-8"/>
@@ -15,8 +15,8 @@
         <strong>I am an experienced data analyst currently working at the Federal Reserve Bank of New York</strong>
         
         <ul class="social-icons">
-        <li><a href="http://www.twitter.com/cdonohue10"><img src='https://cdn2.iconfinder.com/data/icons/social-media-2235/1024/twitter-256.png' /></a></li>
-        <li><a href="http://www.linkedin.com/in/conor-donohue-b90a7189"><img src='https://cdn2.iconfinder.com/data/icons/social-media-2235/1024/linkedin-128.png' /></a></li>
+        <li><a href="http://www.twitter.com/cdonohue10"><img src='https://cdn4.iconfinder.com/data/icons/social-media-flat-7/64/Social-media_Twitter-128.png' /></a></li>
+        <li><a href="http://www.linkedin.com/in/conor-donohue-b90a7189"><img src='https://cdn4.iconfinder.com/data/icons/social-media-flat-7/64/Social-media_LinkedIn-128.png' /></a></li>
 </ul>
         
      </body>
