--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <title>Saying Hello</title>
     
     </head>
+    <style>
+    body  {
+    background-image: url("https://media1.fdncms.com/thecoast/imager/outfit-game-100/u/big/4605373/dipset-3.jpg?cb=1493401776");
+    background-color: #cccccc;
+    }
+</style>
     <center>
     <body>
         <h1>Conor Donohue</h1>
