--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <style>
     body  {
-    background-image: url("https://media1.fdncms.com/thecoast/imager/outfit-game-100/u/big/4605373/dipset-3.jpg?cb=1493401776");
+    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/dynamic-style.png");
     background-color: #cccccc;
     }
     </style>
