--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 	<svg viewBox="0 0 1418 116" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 		<title>@WebDesignerMag</title>
-		<g stroke="none" fill="BLACK" fill-rule="evenodd" fill-opacity="0">
-			<text id="Conor Donohue" stroke="#fff" fill="#645F5A" font-weight="normal" font-family="PermanentMarker-Regular, Permanent Marker" font-size="144">
+		<g stroke="none" fill="none" fill-rule="evenodd" fill-opacity="0">
+			<text id="Conor Donohue" stroke="#fff" fill="#4C4646" font-weight="normal" font-family="PermanentMarker-Regular, Permanent Marker" font-size="144">
 				<tspan x="3" y="109"><!--
 					--><tspan>C</tspan><!--
 					--><tspan>O</tspan><!--
