--- a/index.html
+++ b/index.html
@@ -7,31 +7,29 @@
     </head>
     
     <div class="container">
+	
+	<h1>SVG Animated Birds</h1>
+	
+	<div class="bird-container bird-container--one">
+		<div class="bird bird--one"></div>
+	</div>
+	
+	<div class="bird-container bird-container--two">
+		<div class="bird bird--two"></div>
+	</div>
+	
+	<div class="bird-container bird-container--three">
+		<div class="bird bird--three"></div>
+	</div>
+	
+	<div class="bird-container bird-container--four">
+		<div class="bird bird--four"></div>
+	</div>
+	
+	
 
-	<svg viewBox="0 0 1418 116" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-		<title>@WebDesignerMag</title>
-		<g stroke="none" fill="none" fill-rule="evenodd" fill-opacity="0">
-			<text id="Conor Donohue" stroke="#fff" fill="#4C4646" font-weight="normal" font-family="PermanentMarker-Regular, Permanent Marker" font-size="144">
-				<tspan x="3" y="109"><!--
-					--><tspan>C</tspan><!--
-					--><tspan>O</tspan><!--
-					--><tspan>N</tspan><!--
-					--><tspan>O</tspan><!--
-					--><tspan>R</tspan><!--
-					--><tspan> </tspan><!--
-					--><tspan>D</tspan><!--
-					--><tspan>O</tspan><!--
-					--><tspan>N</tspan><!--
-					--><tspan>O</tspan><!--
-					--><tspan>H</tspan><!--
-					--><tspan>U</tspan><!--
-					--><tspan>E</tspan><!--
-				--></tspan>
-			</text>
-		</g>
-	</svg>
 
-</div>
+
     <style>
     body  {
     background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/dynamic-style.png");
