--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
         <title>Saying Hello</title>
     
     </head>
+
+	<div class="container">
+ 	 <div class="ball"></div>
+  	<div class="ball"></div>
+  	<div class="ball"></div>
+  	<div class="ball"></div>
+  	<div class="ball"></div>
+  	<div class="ball"></div>
+  	<div class="ball"></div>
+	</div>
 	
-   <style>
+	
+	
+    <style>
     body  {
     background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/dynamic-style.png");
     background-color: #cccccc;
